--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.1.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@tanstack/react-query": "^5.25.0",
     "html-react-parser": "^5.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
