--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@ckeditor/ckeditor5-build-classic": "^41.1.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@tanstack/react-query": "^5.25.0",
+    "framer-motion": "^11.0.8",
     "html-react-parser": "^5.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
