--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,11 @@
   "name": "blog-tech",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "author": "LAKSHAY BABBAR",
   "license": "ISC",
