--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^41.1.0",
-    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@tanstack/react-query": "^5.25.0",
     "framer-motion": "^11.0.8",
     "html-react-parser": "^5.1.8",
@@ -19,8 +17,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1",
-    "swiper": "^11.0.7"
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
