--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
