--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "author": "LAKSHAY BABBAR",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.554.0",
+    "aws-sdk": "^2.1599.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
@@ -20,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.0.3",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
