--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.2.12",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.400.0",
+    "markdown-to-jsx": "^7.4.7",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -30,6 +31,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
