--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.49.2",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.400.0",
     "markdown-to-jsx": "^7.4.7",
@@ -27,10 +29,12 @@
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.13.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
